<resources>
    <string name="app_name">Xpression</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc1">Your outer beauty will capture the eyes, your inner beauty will capture the heart, and begins the moment you decide to be yourself.</string>
    <string name="desc2">“Butterflies can’t see their wings. They can’t see how truly beautiful they are, but everyone else can. People are like that as well.”</string>
    <string name="desc3">“We never truly noticed the beauty because we were too busy trying to create it for ypu.”</string>
    <string name="agreement">•By completing this form and signing up, you agree to XPRESSION\s Terms and Privacy Policy•</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_bookings">•History•</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">•Shop•</string>
    <string name="title_more">Profile</string>
    <string name="nails">Nail Xtension</string>
    <string name="natural_nail">Natural Nails Care</string>
    <string name="mikayla_alice">Mikayla Alice</string>
    <string name="joanne_kim">Joanne Kim</string>
    <string name="chloe_palmeira">Chloe Palmeira</string>
    <string name="jackie_queen">Jackie Queen</string>
    <string name="reset_text">You will receive an email with instructions to change your password.</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_settings"> App Settings</string>
    <string name="txt_logout">Logout</string>
    <string name="beautician_text">Beautician &amp; Advanced Aesthetics Practitioner in Nottingham</string>
    <string name="beautician_text2">It\'s SUMMER and it\'s all about you…there\'s never a better time to treat yourself to a gorgeous new style</string>
    <string name="expert_text"><![CDATA["Here at Xpression Hair, Beauty & Aesthetic’s we have built up an excellent reputation in our local area by offering the most comprehensive and expert Hair & Beauty service in Nottingham."]]></string>
    <string name="about_right"><![CDATA[Established in 2021, Xpression Hair & Beauty is one of the best Aesthetics spa in Nottingham, United Kingdom. We are proud to deliver a high standard of beauty services, including nails, eyelashes, waxing, and pedicure.]]></string>
    <string name="catchy_text"><![CDATA[Our mission is to provide the residents of Nottingham with a no hassle Hair & Beauty service where all work exceeds expectations, meets deadlines & offer excellent value.]]></string>
    <string name="testimony1">5 star treatments always from Xpression Hair &amp; Beauty. They are honest about the treatments and the benefits and takes time to explain the science behind them. I have had several facial treatments and nails where the nails stayed on for weeks !!</string>
    <string name="testimony2">Great experience with Xpression Hair &amp; Beauty, very accommodating, helpful as well as professional, been going here for years and wouldn\'t change, id highly recommend you try for yourself.</string>
    <string name="testimony3">Professional service on every visit, have nails and hair done at the salon and always receive so many compliments about both. Xpression Hair &amp; Beauty is friendly and makes everyone comfortable, I wouldn\'t go anywhere else for treatments and recommend to everyone.</string>
    <string name="we_pride_ourselves"><![CDATA[If you’re looking for Hair & Beauty work in and around Nottingham then please do not hesitate to contact us. We pride ourselves on our great level of service and high standard of workmanship.]]></string>
    <string name="cut_and_style">Ladies Cut and Finish From a trim that refreshes your look to a daring restyle, you’re in great hands with our expert stylists. Beautiful hair awaits at the end of this wash, cut and style</string>
    <string name="blowdry">Get that salon-fresh style whether you’re going out or it’s just time to treat yourself.</string>
    <string name="gents_cut">Looking your best is easy with our expert stylists. Whether you prefer a fade, short back and sides, or scissors over comb you’re in safe hands with this wash, cut and style.</string>
    <string name="glossing">For a subtle, natural look, a glossing will blend greys or add depth and shine to your natural colour. It slowly fades over time making it a low-maintenance refresh for your hair.</string>
    <string name="regrowth">When regrowth starts to show after a full head of permanent colour, refresh your roots for beautiful, seamless colour. Upgrade to Inoa colour for just £10.</string>
    <string name="full_head_perm">Lighter or darker this full head of colour can enhance your own natural beauty, cover greys, or make a dramatic impact. Upgrade to Inoa colour for just £10.</string>
    <string name="balayage">Balayage is a natural looking, low maintenance way to add lighter shades to your hair. Colour is swept through the mid-length and ends giving an organic look and feel. For those who want to darken their roots, you will need to add Regrowth Permanent Colour to this service.</string>
    <string name="full_head_highlight">Give your hair gorgeous multi-tonal depth with root to tip colour. In most cases a toner will be necessary to achieve your desired shade and add gloss and shine.</string>
    <string name="T_section">Beautifully disguise your roots between full or half-head visits with highlights placed along your parting and front hairline. In most cases a toner will be necessary to achieve your desired shade and add gloss and shine.</string>
    <string name="confirm_booking">Prices are subject to confirmation during consultation. Any surcharge fees will be discussed during your appointment and may result in a £10-£30 charge being added to your service bill.</string>
    <string name="dye_quote">Hair color is the easiest way to change your appearance, but a bad dye job might draw more attention to you.</string>
    <string name="facial_treat">Estheticians like us are like personal trainers for your skin.</string>
    <string name="manicure">When your nails are part of your outfit, they become more than nails. They become an accessory.</string>
    <string name="barbering">Our barbers are the artist whose drawing on our customers\' heads become the trend and fashion.</string>
    <string name="beard_groom">Sometimes you grow a beard and find it attractive. Sometimes you find it funny.</string>
    <string name="body_massage">“A good weekend starts with a positive attitude and a great massage.”</string>
</resources>