<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@id/navigation_dashboard"
        android:name="app.christopher.beautyroomapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_navigation_dashboard_to_specialistsFragment"
            app:destination="@id/specialistsFragment" />
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_navigation_dashboard_to_yasmineFragment"
            app:destination="@id/YasmineFragment" />
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_navigation_dashboard_to_kristianaFragment"
            app:destination="@id/kristianaFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_aboutUs"
            app:destination="@id/aboutUs"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/action_navigation_dashboard_to_servicesActivity"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:destination="@id/servicesActivity" />
    </fragment>

    <fragment
        android:id="@id/navigation_beauty"
        android:name="app.christopher.beautyroomapp.ui.beauty.BeautyFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_beauty" >
        <action
            android:id="@+id/action_navigation_beauty_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@id/navigation_bookings"
        android:name="app.christopher.beautyroomapp.ui.bookings.BookingsFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_bookings" >
    </fragment>

    <fragment
        android:id="@id/navigation_more"
        android:name="app.christopher.beautyroomapp.ui.more.More"
        android:label="•Account•"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/action_navigation_more_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/specialistsFragment"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.SpecialistsFragment"
        android:label="fragment_specialists"
        tools:layout="@layout/fragment_specialists" >
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_specialistsFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/YasmineFragment"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.YasmineFragment"
        android:label="•••"
        tools:layout="@layout/fragment_yasmine" >
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_bookingFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/kristianaFragment"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.KristianaFragment"
        android:label="•••"
        tools:layout="@layout/fragment_kristiana" >
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_kristianaFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_kristianaFragment_to_confirmCheckoutFragment"
            app:destination="@id/confirmCheckoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/confirmCheckoutFragment"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.ConfirmCheckoutFragment"
        android:label="•••"
        tools:layout="@layout/fragment_confirm_checkout">

        <argument android:name="specialist_name_recipient"
            app:argType="string"/>
        <argument android:name="service_name_recipient"
            app:argType="string" />
        <argument android:name="time_recipient"
            app:argType="string" />
        <argument android:name="period_recipient"
            app:argType="string" />
        <argument android:name="price_recipient"
            app:argType="string" />

        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_confirmCheckoutFragment_to_kristianaFragment"
            app:destination="@id/kristianaFragment" />
        <action
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            android:id="@+id/action_confirmCheckoutFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>

    <fragment
        android:id="@+id/paymentFragment"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.PaymentFragment"
        android:label="•Checkout•"
        tools:layout="@layout/fragment_payment" >

        <argument android:name="service_name_recipient"
            app:argType="string" />
        <argument android:name="time_recipient"
            app:argType="string" />
        <argument android:name="period_recipient"
            app:argType="string" />
        <argument android:name="price_recipient"
            app:argType="string" />
        <action
            android:id="@+id/action_paymentFragment_to_confirmCheckoutFragment"
            app:destination="@id/confirmCheckoutFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/action_paymentFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/paymentFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/aboutUs"
        android:name="app.christopher.beautyroomapp.toolbar.AboutUs"
        android:label="About Us"
        tools:layout="@layout/activity_about_us" />
    <activity
        android:id="@+id/servicesActivity"
        android:name="app.christopher.beautyroomapp.ui.dashboard.external.ServicesActivity"
        android:label="activity_services"
        tools:layout="@layout/activity_services" />
</navigation>