<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toolbar.Testimonials">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/top_layout"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="25dp"
                android:id="@+id/cv2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="225dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:background="@drawable/slide1"
                        android:layout_height="match_parent"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:background="@color/dark_brown"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:id="@+id/desc_txt"
                            android:textColor="@color/brown"
                            android:maxWidth="170dp"
                            android:padding="10dp"
                            android:maxHeight="140dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textAllCaps="true"
                            android:fontFamily="sans-serif"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="Testimonials"
                            android:textSize="20sp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We exist for our customers"
                android:textAllCaps="true"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:id="@+id/text1"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cv2"
                android:textColor="@color/dark_brown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Here's what some say..."
                android:textSize="17sp"
                android:paddingHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                android:id="@+id/text2"
                app:layout_constraintTop_toBottomOf="@id/text1"
                android:textColor="@color/dark_brown"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/text2"
                android:layout_marginTop="30dp"
                android:id="@+id/layout1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="250dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"
                    android:id="@+id/test1"
                    android:textColor="@color/dark_brown"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/test_image1"
                    android:text="@string/testimony1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="• Mikayla Alice •"
                    app:layout_constraintStart_toEndOf="@id/test_image1"
                    app:layout_constraintTop_toBottomOf="@id/test1"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/dark_brown"
                    android:textStyle="normal"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/test_image1"
                    app:layout_constraintTop_toTopOf="@id/test1"
                    app:layout_constraintBottom_toBottomOf="@id/test1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/spec2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/layout1"
                android:layout_marginTop="30dp"
                android:id="@+id/layout2"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="250dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"
                    android:id="@+id/test2"
                    android:textColor="@color/dark_brown"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/test_image2"
                    android:text="@string/testimony2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="• Chloe Palmeira •"
                    app:layout_constraintStart_toEndOf="@id/test_image2"
                    app:layout_constraintTop_toBottomOf="@id/test2"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/dark_brown"
                    android:textStyle="normal"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/test_image2"
                    app:layout_constraintTop_toTopOf="@id/test2"
                    app:layout_constraintBottom_toBottomOf="@id/test2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/spec4"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/layout2"
                android:layout_marginTop="30dp"
                android:id="@+id/layout3"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="250dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"
                    android:id="@+id/test3"
                    android:textColor="@color/dark_brown"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/test_image3"
                    android:text="@string/testimony3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="• Joanne Kim •"
                    app:layout_constraintStart_toEndOf="@id/test_image3"
                    app:layout_constraintTop_toBottomOf="@id/test3"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/dark_brown"
                    android:textStyle="normal"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/test_image3"
                    app:layout_constraintTop_toTopOf="@id/test3"
                    app:layout_constraintBottom_toBottomOf="@id/test3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/spec6"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>